--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <i class="uil uil-times nav__close" id="nav-close"></i>
                 </div>
 
-                <div class="nav__btns animate">
+                <div class="nav__btns">
                     <!-- Theme change button -->
                     <i class="uil uil-moon change-theme" id="theme-button"></i>
 
@@ -507,7 +507,7 @@
                         <div class="qualification__content" data-content id="work">
                             <!--==================== QUALIFICATION 1 ====================-->
                             <div class="qualification__data">
-                                <div class="leftt">
+                                <div>
                                     <h3 class="qualification__title">Front-end Developer</h3>
                                     <span class="qualification__subtitle">Freelance Job</span>
                                     <div class="qualification__calendar">
@@ -527,7 +527,7 @@
                                     <span class="qualification__rounder"></span>
                                     <span class="qualification__line"></span>
                                 </div>
-                                <div class="rightt">
+                                <div>
                                     <h3 class="qualification__title">UI/UX Designer</h3>
                                     <span class="qualification__subtitle">Freelance Job</span>
                                     <div class="qualification__calendar">
@@ -538,7 +538,7 @@
                             </div>
                             <!--==================== QUALIFICATION 3 ====================-->
                             <div class="qualification__data">
-                                <div class="leftt">
+                                <div>
                                     <h3 class="qualification__title">Graphic Designer</h3>
                                     <span class="qualification__subtitle">Freelance Job</span>
                                     <div class="qualification__calendar">
