--- a/index.html
+++ b/index.html
@@ -1018,7 +1018,7 @@
         <!--==================== SWIPER JS ====================-->
         <script src="assets/js/swiper-bundle.min.js"></script>
 
-        <!-- scroll reveal javascript link -->
+        <!--==================== SCROLL REVEAL JS ====================-->
         <script src="assets/js/scrollreveal.min.js"></script>
 
         <!--==================== MAIN JS ====================-->
