--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Welcome to my portfolio website! I am a skilled Front-end Developer & UI/UX Designer & Branding Designer with 1 years of experience. Explore my diverse range of projects showcasing my expertise in design and development. From my clients on freelancing sites, witness my attention to detail, creativity, and commitment to delivering exceptional results. Contact me today to discuss potential collaborations and bring your vision to life.">
-        <meta name="keywords" content="merna, merna mamdouh, merna mamdouh mounir, merna's portfolio, merna portfolio, portfolio merna"/>
-        <meta name="author" content="Merna Mamdouh"/>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta name="keywords" content="merna, merna mamdouh, merna mamdouh mounir, merna's portfolio, merna portfolio, portfolio merna">
+        <meta name="author" content="Merna Mamdouh">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Merna's Portfolio</title>
 
         <!--==================== FAVICON ====================-->
-        <link rel="icon" type="image/x-icon" href="assets/img/logoo.png"/>
+        <link rel="icon" type="image/x-icon" href="assets/img/logoo.png">
 
         <!--==================== UNICONS ====================-->
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
@@ -106,14 +106,14 @@
                                     165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
                                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
-                                    <image class="home__blob-img" x='22' y='-8' xlink:href="assets/img/profile.png"/>
+                                    <image class="home__blob-img" x='22' y='-8' xlink:href="assets/img/profile.png" width="100"/>
                                     <!-- <image class="home__blob-img" x='-8' y='-100' xlink:href="assets/img/IMG_20230827_010406_928.png"/> -->
                                 </g>
                             </svg>
                         </div>
                         
                         <div class="home__data left">
-                            <h1 class="home__title">Hi, I'am Merna</h1>
+                            <h2 class="home__title">Hi, I'am Merna</h2>
                             <h3 class="home__subtitle" id="jobTitle">Front-end Developer</h3>
                             <p class="home__description">High level experience in web design and development
                                 knowledge, producing quality work.</p>
@@ -163,7 +163,7 @@
                         </div> -->
 
                         <div class="about__buttons">
-                            <a download="" href="assets/pdf/Merna Mamdouh - CV.pdf" target="_blank" class="button button--flex">
+                            <a download="" href="assets/pdf/Merna_Mamdouh-CV.pdf" target="_blank" class="button button--flex">
                                 Download CV <i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
@@ -183,7 +183,7 @@
                                 <i class="uil uil-brackets-curly skills__icon"></i>
 
                                 <div>
-                                    <h1 class="skills__title">Frontend developer</h1>
+                                    <h2 class="skills__title">Frontend developer</h2>
                                     <span class="skills__subtitle">More than 1 years</span>
                                </div>
                                <i class="uil uil-angle-down skills__arrow"></i>
@@ -253,7 +253,7 @@
                                 <i class="uil uil-swatchbook skills__icon"></i>
 
                                 <div>
-                                    <h1 class="skills__title">Designer</h1>
+                                    <h2 class="skills__title">Designer</h2>
                                     <span class="skills__subtitle">More than 3 years</span>
                                </div>
                                <i class="uil uil-angle-down skills__arrow"></i>
@@ -315,7 +315,7 @@
                                 <i class="uil uil-server-network skills__icon"></i>
 
                                 <div>
-                                    <h1 class="skills__title">Backend developer</h1>
+                                    <h2 class="skills__title">Backend developer</h2>
                                     <span class="skills__subtitle">More than 1 years</span>
                                </div>
                                <i class="uil uil-angle-down skills__arrow"></i>
@@ -367,7 +367,7 @@
                                 <i class="uil uil-server-network skills__icon"></i>
 
                                 <div>
-                                    <h1 class="skills__title">Database</h1>
+                                    <h2 class="skills__title">Database</h2>
                                     <span class="skills__subtitle">More than 1 years</span>
                                </div>
                                <i class="uil uil-angle-down skills__arrow"></i>
@@ -796,7 +796,7 @@
                                 <i class="uil uil-message project__icon button__icon"></i>
                             </a>
                         </div>
-                        <img src="assets/img/profile.png" alt="project__img" class="project__img top"/>
+                        <img src="assets/img/profile.png" alt="project__img" class="project__img top">
                     </div>
                 </div>                
             </section>
@@ -950,7 +950,7 @@
                         </div>
                         <div class="contact__content">
                             <label for="message" class="contact__label">Message</label>
-                            <textarea name="Message" id="message" cols="0" rows="7" class="contact__input" autocomplete="off" required></textarea>
+                            <textarea name="Message" id="message" cols="1" rows="7" class="contact__input" autocomplete="off" required></textarea>
                         </div>
                         <div>
                             <button type="submit" class="button button--flex send">
