--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                             <!--==================== QUALIFICATION 3 ====================-->
                             <div class="qualification__data">
                                 <div>
-                                    <h3 class="qualification__title">Graphic Designer</h3>
+                                    <h3 class="qualification__title">Branding Designer</h3>
                                     <span class="qualification__subtitle">Freelance Job</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
@@ -566,7 +566,7 @@
                         <div class="left">
                             <div>
                                 <i class="uil uil-web-grid services__icon"></i>
-                                <h3 class="services__title">Ui/Ux <br> Designer</h3>
+                                <h3 class="services__title">UI/UX <br> Designe</h3>
                             </div>
                             <span class="button button--flex button--small button--link services__button">
                                 View More
@@ -575,7 +575,7 @@
                         </div>
                         <div class="services__modal">
                             <div class="services__modal-content">
-                                <h4 class="services__modal-title">Ui/Ux <br> Designer</h4>
+                                <h4 class="services__modal-title">UI/UX <br> Designe</h4>
                                 <i class="uil uil-times services__modal-close"></i>
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
@@ -616,7 +616,7 @@
                         <div class="top">
                             <div>
                                 <i class="uil uil-arrow services__icon"></i>
-                                 <h3 class="services__title">Frontend <br> Developer</h3>
+                                 <h3 class="services__title">Front-end <br> Develope</h3>
                              </div>
                              <span class="button button--flex button--small button--link services__button">
                                  View More
@@ -625,7 +625,7 @@
                         </div>
                         <div class="services__modal">
                             <div class="services__modal-content">
-                                <h4 class="services__modal-title">Frontend <br> Developer</h4>
+                                <h4 class="services__modal-title">Front-end <br> Develope</h4>
                                 <i class="uil uil-times services__modal-close"></i>
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
@@ -658,7 +658,7 @@
                         <div class="right">
                             <div>
                                 <i class="uil uil-pen services__icon"></i>
-                                <h3 class="services_title">Branding <br> Designer</h3>
+                                <h3 class="services_title">Branding <br> Designe</h3>
                             </div>
                             <span class="button button--flex button--small button--link services__button">
                                 View More
@@ -667,7 +667,7 @@
                         </div>
                         <div class="services__modal">
                             <div class="services__modal-content">
-                                <h4 class="services__modal-title">Branding <br> Designer</h4>
+                                <h4 class="services__modal-title">Branding <br> Designe</h4>
                                 <i class="uil uil-times services__modal-close"></i>
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
