--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                         <div class="left">
                             <div>
                                 <i class="uil uil-web-grid services__icon"></i>
-                                <h3 class="services__title">UI/UX <br> Designe</h3>
+                                <h3 class="services__title">UI/UX <br> Design</h3>
                             </div>
                             <span class="button button--flex button--small button--link services__button">
                                 View More
@@ -575,7 +575,7 @@
                         </div>
                         <div class="services__modal">
                             <div class="services__modal-content">
-                                <h4 class="services__modal-title">UI/UX <br> Designe</h4>
+                                <h4 class="services__modal-title">UI/UX <br> Design</h4>
                                 <i class="uil uil-times services__modal-close"></i>
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
@@ -658,7 +658,7 @@
                         <div class="right">
                             <div>
                                 <i class="uil uil-pen services__icon"></i>
-                                <h3 class="services_title">Branding <br> Designe</h3>
+                                <h3 class="services_title">Branding <br> Design</h3>
                             </div>
                             <span class="button button--flex button--small button--link services__button">
                                 View More
@@ -667,7 +667,7 @@
                         </div>
                         <div class="services__modal">
                             <div class="services__modal-content">
-                                <h4 class="services__modal-title">Branding <br> Designe</h4>
+                                <h4 class="services__modal-title">Branding <br> Design</h4>
                                 <i class="uil uil-times services__modal-close"></i>
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
